--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header">
         <div class="container">
             <div class="profile-section">
-                <img src="images\profilepic.jpeg" alt="ARENDALA ESHWAR" class="profile-img">
+                <img src="images\profile22.jpeg" alt="ARENDALA ESHWAR" class="profile-img">
                 <div class="profile-info">
                     <h1>ARENDALA ESHWAR</h1>
                     <p class="title">BTech 3rd Year - CSE (AI & ML)</p>
@@ -235,4 +235,5 @@
         </div>
     </footer>
 </body>
+
 </html>
